[package]
name = "todomvc"
version = "0.1.0"
edition = "2024"
license.workspace = true
publish = false

[[bin]]
name = "todomvc_native"
path = "src/main.rs"

[lib]
crate-type = ["cdylib"]

[features]
default = ["vello"]
vello = ["dioxus-native/vello"]
hybrid = ["dioxus-native/vello-hybrid"]
skia = ["dioxus-native/skia"]
cpu = ["cpu-pixels"]
cpu-pixels = ["dioxus-native/vello-cpu-pixels"]
cpu-softbuffer = ["dioxus-native/vello-cpu-softbuffer"]
incremental = ["dioxus-native/incremental"]
logtime = ["log_frame_times", "log_phase_times"]
log_frame_times = ["dioxus-native/log-frame-times"]
log_phase_times = ["dioxus-native/log-phase-times"]
floats = ["dioxus-native/floats"]
tracing = ["dioxus-native/tracing", "dep:tracing-subscriber"]
hot-reload = ["dioxus-native/hot-reload"]

[dependencies]
tracing-subscriber = { workspace = true, optional = true }

# Disable unicode URL support
# See https://github.com/hsivonen/idna_adapter
idna_adapter = "=1.0.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus-native = { workspace = true, features = ["svg", "system-fonts", "data-uri", "prelude"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus-native = { workspace = true, features = ["svg", "data-uri", "prelude", "vello-hybrid"] }
anyrender_vello_hybrid = { version = "0.4", features = ["webgl"] }
blitz-dom   = { workspace = true, default-features = false, features = ["woff"] }
blitz-shell = { workspace = true, default-features = false }
dioxus-core = { workspace = true }
winit = "=0.31.0-beta.2"
parley = { version = "0.9", default-features = false, features = ["std"] }
wasm-bindgen = { workspace = true }
console_error_panic_hook = "0.1"

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6.0", features = ["native-activity"] }