[package]
name = "wasm_7guis"
version = "0.1.0"
edition = "2024"
publish = false

# Standalone workspace prevents native cargo check from trying to build this.
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
# dioxus-native with the vello-hybrid renderer (WebGL for WASM).
# Local path to blitz at the unmerged commit that has ResumeReady async-resume support.
# Rendered by dioxus-native.
dioxus-native = { path = "../../packages/dioxus-native", default-features = false, features = ["prelude", "vello-hybrid"] }

# Must explicitly add webgl feature on top of what dioxus-native enables
anyrender_vello_hybrid = { git = "https://github.com/DioxusLabs/anyrender", rev = "1f400d94172ba1dd10d97501cee823912f7fb6ab", features = ["webgl"] }

# Lower-level shell and DOM types used in the entry point
blitz-dom   = { path = "../../packages/blitz-dom",   default-features = false, features = ["woff"] }
blitz-shell = { path = "../../packages/blitz-shell", default-features = false }

# Dioxus VirtualDom (same version as local blitz workspace)
dioxus-core = "0.7.3"

# Windowing (must match blitz workspace exactly)
winit = "=0.31.0-beta.2"

# Font registration — browsers block system font access from WASM
parley = { version = "0.9", default-features = false, features = ["std"] }

# WASM glue
wasm-bindgen             = "0.2"
console_error_panic_hook = "0.1"

# Required by the Timer task (futures_timer supports wasm32)
futures-timer = { version = "3", features = ["wasm-bindgen"] }

# Exact version pin required to resolve transitive version conflicts
idna_adapter = "=1.0.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
