[package]
name = "wasm_hello"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyrender_vello_hybrid = { workspace = true, features = ["webgl"] }
blitz-dom = { workspace = true, features = ["woff"] }
blitz-html = { workspace = true }
blitz-shell = { workspace = true, default-features = false, features = ["tracing"]}

winit = { workspace = true }

# Browsers don't expose system fonts to wasm, so we register a bundled font
# directly with the parley FontContext.
parley = { workspace = true, features = ["std"] }

# wasm runtime glue
console_error_panic_hook ={ workspace = true }
wasm-bindgen = { workspace = true }
tracing-wasm ={ workspace = true }
tracing = { workspace = true }
web-sys = { workspace = true, features = ["Document", "HtmlCanvasElement"] }
