# Copyright © SixtyFPS GmbH <info@slint.dev>
# SPDX-License-Identifier: MIT

[package]
name = "wgpu_texture"
version = "0.0.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
anyrender = { workspace = true }
anyrender_vello = { workspace = true }
blitz-traits = { workspace = true}
blitz-dom = { workspace = true, features = ["tracing"]}
blitz-html = { workspace = true }
blitz-shell = { workspace = true, features = ["tracing"] }
dioxus-native = { workspace = true, features = ["vello", "system-fonts", "prelude"] }
wgpu_context = { workspace = true }
wgpu = { workspace = true }
color = { workspace = true }
bytemuck = { workspace = true }
pollster = { workspace = true }
