# Copyright © SixtyFPS GmbH <info@slint.dev>
# SPDX-License-Identifier: MIT

[package]
name = "wgpu_texture"
version = "0.0.0"
edition = "2021"
license = "MIT"
publish = false

[features]
default = ["vello"]
vello = ["dep:anyrender_vello", "dioxus-native/vello"]
vello-hybrid = ["dep:anyrender_vello_hybrid", "dioxus-native/vello-hybrid"]

[dependencies]
anyrender = { workspace = true }
anyrender_vello = { workspace = true, optional = true }
anyrender_vello_hybrid = { workspace = true, optional = true }
peniko = { workspace = true }
blitz-traits = { workspace = true}
blitz-dom = { workspace = true, features = ["tracing", "custom-widget"] }
blitz-paint = { workspace = true, features = ["custom-widget"] }
blitz-html = { workspace = true }
blitz-shell = { workspace = true, features = ["tracing"] }
dioxus-native = { workspace = true, features = ["system-fonts", "prelude"] }
wgpu_context = { workspace = true }
wgpu = { workspace = true }
color = { workspace = true }
bytemuck = { workspace = true }
pollster = { workspace = true }
