[package]
name = "wpt"
version = "0.1.0"
edition = "2024"
license.workspace = true

[features]
default = ["gpu"]
gpu = ["dep:anyrender_vello"]
cpu = ["dep:anyrender_vello_cpu"]

[dependencies]
blitz-dom = { path = "../../packages/blitz-dom", default-features = false, features = ["svg", "woff-c"] }
blitz-html = { path = "../../packages/blitz-html" }
blitz-traits = { path = "../../packages/blitz-traits" }
blitz-paint = { path = "../../packages/blitz-paint" }
anyrender_vello = { path = "../../packages/anyrender_vello", optional = true }
anyrender_vello_cpu = { path = "../../packages/anyrender_vello_cpu", optional = true }
anyrender = { path = "../../packages/anyrender" }
taffy = { workspace = true }
parley = { workspace = true }
image = { workspace = true }
url = { workspace = true }
data-url = { workspace = true }
png = { version = "0.17" }
glob = { version = "0.3.1" }
dify = { version = "0.7.4", default-features = false }
env_logger = { version = "0.11.5" }
owo-colors = "4.1.0"
log = "0.4.22"
regex = "1.11.1"
rayon = "1.10.0"
thread_local = "1.1.8"
bitflags = "2.6.0"
pollster = "0.4.0"
atomic_float = "1"
supports-hyperlinks = "3.1.0"
terminal-link = "0.1.0"
wptreport = { version = "0.0.5", default-features = false }
os_info = "3.10.0"
serde_json = "1.0.140"
