[package]
name = "wpt"
version = "0.1.0"
edition = "2024"
license.workspace = true
rust-version.workspace = true
publish = false

[features]
default = ["cpu"]
gpu = ["dep:anyrender_vello"]
cpu = ["dep:anyrender_vello_cpu"]
incremental = ["blitz-dom/incremental"]

[dependencies]
blitz-dom = { workspace = true, features = ["svg", "system_fonts", "woff-rust"] }
blitz-html = {workspace = true }
blitz-traits = { workspace = true }
blitz-paint = { workspace = true, features = ["default"] }
anyrender = { workspace = true }
anyrender_vello = { workspace = true, optional = true }
anyrender_vello_cpu = { workspace = true, optional = true }

taffy = { workspace = true }
parley = { workspace = true }
image = { workspace = true, features = ["png"] }
url = { workspace = true }
data-url = { workspace = true }
png = { version = "0.17" }
glob = { version = "0.3.1" }
dify = { version = "0.7.4", default-features = false }
env_logger = { version = "0.11.5" }
owo-colors = "4.1.0"
log = "0.4.22"
regex = "1.11.1"
rayon = { workspace = true }
thread_local = { workspace = true }
bitflags = "2.6.0"
pollster = "0.4.0"
atomic_float = "1"
supports-hyperlinks = "3.1.0"
terminal-link = "0.1.0"
wptreport = { version = "0.0.5", default-features = false }
os_info = "3.10.0"
serde_json = "1.0.140"
