[package]
name = "browser-persistence"
version = "0.0.0"
edition = "2024"
license.workspace = true
publish = false

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1.3"
tracing = { workspace = true }
url = { workspace = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
directories = { workspace = true }
